--- a/responsive_navabr/style.css
+++ b/responsive_navabr/style.css
@@ -131,7 +131,7 @@ body {
     }
 
     .nav__item:hover {
-        background-color: #212020;
+        background-color: #312f2f;
         cursor: pointer;
     }
 
